# safe-deploy-check

./: Dockerfile  README.md  action.yml  entrypoint.py  pyproject.toml  risk.py  test_risk.py
.github/workflows/: docker-build-push.yml  prtest.yml
src/: certainty_score.py  entrypoint.py  github_gateway.py  risk.py
tests/: conftest.py  test_certainty_score.py  test_entrypoint.py  test_github_gateway.py  test_risk.py
